# gradient_descent_and_chaos

./: README.md  main.py  pyproject.toml
notebook/: GD_bifurcation.ipynb  Lyapunov_exponent.ipynb  bifurcation_experiments.ipynb  logistic_bifurcatoion.ipynb  misc.ipynb
src/gd_and_chaos/: __init__.py
src/gd_and_chaos/bifurcation_tools/: __init__.py  bifurcation.py
src/gd_and_chaos/lyapunov_tools/: __init__.py  lyapunov.py
